--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  max-width: 100vw;
+  max-height: 100vh;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: black;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.memeContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.memeContainer img {
+  max-width: 100vw;
+  max-height: 80vh;
 }
+
+.load-another {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 2rem;
+  cursor: pointer;
+  background-color: #fff;
+  color: #000;
+  padding: 15px 25px;
+  border-radius: 25px;
+  box-shadow: rgb(22, 45, 255) 5px 0px 10px 0px, rgb(172, 28, 255) 0px 0px 10px 0px, rgb(223, 30, 30) 0px 0px 10px 0px, rgb(48, 191, 235) 0px 0px 10px 0px;
+}
+
+.load-another:hover {
+  box-shadow: rgb(22, 45, 255) 0px 5px 15px 0px;
+}
+
